--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="Description" content="Description">
     <title> Page d'accueil </title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -29,14 +32,16 @@
     </header>
     
     <main>
-        <h1 id="title"> 
+        <section id="sec1">
+        <h1> 
             Bienvenue dans l'univers des fraises 
         </h1>
-        <p id="paragraph"> 
+        <p> 
             Découvrez tout ce que vous avez toujours voulu savoir sur ce fruit rouge délicieux et irrésistible 
         </p>
-        <img src="media/img/fraises.jpeg" alt="Les fraises" height=400 width=750>
-        <section id="sec1">
+        
+        </section>
+        <section id="sec2">
             <h2> 
                 Les différentes variétés de fraises 
             </h2>
