--- a/page-detail-1.html
+++ b/page-detail-1.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Variété des fraises</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <header>
         <nav>
-            <ul>
+            <ul id="listheader">
                 <li>
-                    <a href="index.html">Accueil</a>
+                    <a class="aheader" href="index.html">Accueil</a>
                 </li>
                 <li>
-                    <a href="page-detail-1.html">Variété des fraises</a>
+                    <a class="aheader" href="page-detail-1.html">Variété des fraises</a>
                 </li>
                 <li>
-                    <a href="page-detail-2.html">La mariguette</a>
+                    <a class="aheader" href="page-detail-2.html">La mariguette</a>
                 </li>
                 <li>
-                    <a href="page-detail-3.html">La cléry</a>
+                    <a class="aheader" href="page-detail-3.html">La cléry</a>
                 </li>
             </ul>
         </nav>
