Ajout des styles secteurs 1 et 2

--- a/index.html
+++ b/index.html
@@ -42,31 +42,28 @@
         
         </section>
         <section id="sec2">
-            <h2> 
+            <h2 id="h2"> 
                 Les différentes variétés de fraises 
             </h2>
-            <p id="paragraph">
+            <p id="p1">
                 Il existe de nombreuses variétés de fraises, parmi les quelles : 
             </p>
-            <ul>
-                <li>                 
+            <ul id="ul1">
+                <li id="li1">                 
                     <em>La gariguette</em>, petite et allongée, très parfumée.                
                 </li>
-                <li>            
+                <li id="li1">            
                     <em>La mariquette</em>, très sucrée et juteuse.             
                 </li>
-                <li>
+                <li id="li1">
                     <em>La cléry</em>, très grosse et très sucrée. 
                  </li>
              </ul>
         </section>
-        <section>
+        <section id="sec3">
             <h3>
                 Les tailles des fraises
-            </h3>  
-            <p id="paragraph">
-                Voici les tailles selon les variétés:
-            </p>  
+            </h3>                
             
             <ol>
                 <li>
