Travail sur section 3, pas fini

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <p id="p1">
                 Il existe de nombreuses variétés de fraises, parmi les quelles : 
             </p>
-            <ul id="ul1">
+            <ul id="l1">
                 <li id="li1">                 
                     <em>La gariguette</em>, petite et allongée, très parfumée.                
                 </li>
@@ -61,11 +61,11 @@
              </ul>
         </section>
         <section id="sec3">
-            <h3>
-                Les tailles des fraises
+            <h3 id="h2">
+                Les tailles des fraises selon les variétés
             </h3>                
             
-            <ol>
+            <ol id="l1">
                 <li>
                     La <strong>gariguette</strong> mesure entre 2 et 3 cm de long.         
                 </li>
